kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubeflow
  labels:
    name: kubeflow
    app: mlops-predictive-maintenance
